[package]
name = "paper-cup-phone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.1"
actix-web = "4.4.0"
actix-web-actors = "4.2.0"
redis = "0.23.3"
rocksdb = "0.21.0"
serde = "1.0.188"
serde_derive = "1.0.188"
serde_json = "1.0.107"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["parking_lot"] }
